--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,12 @@ pids
 logs
 results
 tmp
-
+*.vscode
 #Build
 public/css/main.css
 
 # API keys and secrets
-.env.dev
+*.env.dev
 
 # Dependency directory
 node_modules
